# PokemonApps

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/pokemonapps/: PokemonActivity.kt  PokemonApps.kt
app/src/main/java/com/example/pokemonapps/di/: AppModule.kt
app/src/main/java/com/example/pokemonapps/navigation/: NavGraph.kt  Route.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/src/main/kotlin/: Dependencies.kt
foundation/: build.gradle.kts
foundation/src/main/java/com/example/foundation/: ViewState.kt
foundation/src/main/java/com/example/foundation/mapper/: Mapper.kt
foundation/src/main/java/com/example/foundation/views/: Loading.kt
gradle/wrapper/: gradle-wrapper.properties
local/: build.gradle.kts
local/src/main/java/com/example/local/dao/: PokemonDao.kt  RemoteKeyDao.kt
local/src/main/java/com/example/local/di/: DatabaseModule.kt
local/src/main/java/com/example/local/entities/: PokemonDetailEntity.kt  PokemonEntity.kt  RemoteKeys.kt
local/src/main/java/com/example/local/provider/: AppDatabase.kt  Converter.kt
remote/: build.gradle.kts
remote/jni/: CMakeLists.txt  remoteenvars.cpp
remote/jni/include/: remoteenvars.h  remoteenvars_dev.h  remoteenvars_rel.h
remote/src/main/java/com/example/remote/const/: RemoteEnv.kt
remote/src/main/java/com/example/remote/di/: RemoteModule.kt
remote/src/main/java/com/example/remote/models/: ApiResult.kt  PokemonApi.kt  (+6 more)
test/: build.gradle.kts
(+16 files in other folders)
